# rust-iam

./: Cargo.toml  README.md
matches-macro/: Cargo.toml
matches-macro/src/: lib.rs
src/: effect.rs  engine.rs  lib.rs  policy.rs  policy_collection.rs  resource.rs  statement.rs
src/aws/: aws_partitions.rs  aws_regions.rs  mod.rs
src/traits/: matches.rs  mod.rs
