[package]
name = "rust-iam"
version = "0.1.3"
edition = "2021"

[features]
with-sqlx=["sqlx"]

[dependencies]
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
wildcard = "0.3.0"
matches-macro = {path = "./matches-macro"}

[dependencies.sqlx]
version = "0.8.1"
features = ["postgres", "sqlx-postgres"]
optional = true